--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -48,7 +48,7 @@ colors:
 background_opacity: 0.97
 
 # Allow terminal applications to change Alacritty's window title.
-dynamic_title: true
+window.dynamic_title: true
 
 cursor:
   # Cursor style
